syntax = "proto3";

option csharp_namespace = "Nodus.NotificaitonService";

package greet;

// The greeting service definition.
service Notificator {
  // Sends a greeting
  rpc SendEmail (EmailRequest) returns (SendEmailResponse);
}

// The request message containing the user's name.
message EmailRequest {
  string email = 1;
  string subject = 2;
  string message = 3;
}

// The response message containing the greetings.
message SendEmailResponse {
  bool success = 1;
  string message = 2;
}
